//
//
// db3_base.proto
// Copyright (C) 2022 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//


syntax = "proto3";
package db3_base_proto;

enum UnitType {
    DB3 = 0;
    TAI = 1; // 10^6 TAI = 1 DB3
}

message Units {
    UnitType utype = 1;
    int64 amount = 2;
}

enum ChainRole {
    SettlementChain = 0;
    StorageShardChain = 10;
    DvmComputingChain = 20;
}

enum ChainId {
    MainNet = 0;
    TestNet = 10;
    DevNet = 20;
}


message Erc20Token {
    // for example USDT
    string symbal = 1;
    // for example cent, usdt
    repeated string units = 2;
    // for example 1, 10 which means 1 usdt = 10 cent
    repeated uint64 scalar = 3;
}

message Price {
    uint64 amount = 1;
    string unit = 2;
    Erc20Token token = 3;
}

message BroadcastMeta {
    uint64 nonce = 1;
    // the chain id of db3
    ChainId chain_id = 2;
    // the chain role of db3
    ChainRole chain_role = 3;
}
